fixing overflow issue

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/header/_header.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/header/_header.scss
@@ -205,7 +205,7 @@
     width: 100%;
     position: absolute;
     z-index: $zindex-p;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
 
     @media #{$desktop} {
